# particle-simulator

./: .gitignore  Cargo.toml  README.md  TODO.md
cuda_simulator/: .clang-format  .clangd  Makefile  job.sh  jod.sh
cuda_simulator/src/: cuda_simulator.c  cuda_simulator.cu  frontend.h  kernel.cuh  kernel.h  kernel_bucket.cuh  kernel_compact.cuh  log.h  particle.cuh  particle.h  thread_pool.hpp
cuda_simulator/src/lib/: .clangd  frontend.hpp  thread_pool.hpp
doc/: Makefile  bibliography.yml  project.typ
particle-editor/: .gitignore  Cargo.toml  README.md
particle-editor/src/: backend.rs  editor.rs  graphics.rs  main.rs  shader.wgsl  simulation.rs
particle-editor/src/egui_utils/: mod.rs
particle-editor/src/wgpu_utils/: mod.rs
particle_editor/: Cargo.toml
particle_editor/src/: backend.rs  editor.rs  graphics.rs  main.rs  shader.wgsl  simulation.rs
particle_editor/src/egui_utils/: mod.rs  number_formatter.rs
particle_editor/src/wgpu_utils/: depth_buffer.rs  mod.rs
particle_io/: Cargo.toml
particle_io/c_api/: Cargo.toml  build.rs
particle_io/c_api/src/: lib.rs  particle.rs  reader.rs  tcp.rs  writer.rs
particle_io/src/: lib.rs  particle.rs  presets.rs  reader.rs  tcp.rs  writer.rs
