[package]
name = "particle-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
pollster = "0.4"
wgpu = "27.0"
winit = { version = "0.30", features = ["android-native-activity"] }
bytemuck = "1.24"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"

[profile.release]
strip = true
lto = "thin"
opt-level = "s"
