[package]
name = "particle_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
wgpu = "27.0"
winit = { version = "0.30", features = ["android-native-activity"] }
bytemuck = "1.24"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
egui_knob = "0.3.6"
particle_io = { path = "../particle_io" }
egui_extras = { version = "0.33", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.9"
